# WhiteRobotC

./: WhiteRobotC.sln
WhiteRobotC/: .portfolio_simulation.csv.icloud  .portfolio_simulation_edited.xlsx.icloud  CMakeLists.txt  Date.cpp  Date.h  MenuWhiteRobot.h  Portfolio_Simulation.csv  RobotMenu.cpp  RobotMenu.h  SPX500_H4_SIGNALS.CSV  SPX500_USD_H4.CSV  Signal_Generator.cpp  Signal_Generator.h  WhiteRobot.cpp  WhiteRobot.h  WhiteRobotC.cpp  WhiteRobotC.vcxproj  WhiteRobotC.vcxproj.filters  WhiteStrategy.cpp  WhiteStrategy.h  portfolio_simulation.csv  portfolio_simulationV2.csv  portfolio_simulation_V1_5.csv  simulations - Copy.csv  simulations.csv
WhiteRobotC/src/: .SPX500_H4_SIGNALS.CSV.icloud  .index_data_1h.CSV.icloud  index_data_1h.CSV  index_data_4h.csv
WhiteRobotOriginal/: .portfolio_simulation1.csv.icloud  CMakeLists.txt  RobotMenu.cpp  RobotMenu.h  WhiteRobot.cpp  WhiteRobotC.vcxproj  simulations.csv
WhiteRobotOriginal/src/: Portfolio_Simulation.csv  SPX500_USD_H4_2003.CSV  SPX500_USD_H4_demo.CSV
